--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react-hook-form": "^7.44.2",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
+    "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-scroll": "^1.8.7",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "styled-components": "^5.3.11",
